@@ -3874,3 +3874,4 @@ Changelog for GXemul:
 		3.1 to 5.0 (for both R3000 and R4400).
 		Moving regression test expect scripts to the test/ directory.
 		Creating a regression test expect script for NetBSD/arc 5.0.
+20090712	Adding a dummy "testm88k" machine for the new framework.
